@@ -30,36 +30,4 @@ from .PiccoloDataDir import *
 from .PiccoloSysinfo import *
 from .PiccoloSpectrometer import *
 from .PiccoloScheduler import *
-from .PiccoloBaseClient import PiccoloClientBase
-
-import asyncio
-
-class PiccoloSystem(PiccoloClientBase):
-    NAME = None
-    def __init__(self,baseurl):
-        super().__init__()
-        self.control = PiccoloControl(baseurl)
-        self.scheduler = PiccoloScheduler(baseurl)
-        self.sys = PiccoloSysinfo(baseurl)
-        self.spec = PiccoloSpectrometers(baseurl)
-        self.data = PiccoloDataDir(baseurl)
-
-    async def _wait(self):
-        self.log.debug('waiting for tasks')
-        for task in asyncio.Task.all_tasks():
-            try:
-                await task
-            except asyncio.CancelledError:
-                continue
-        self.log.debug('all tasks done')
-        
-    def shutdown(self):
-        self.log.debug('shutting down')
-        self.control.shutdown_tasks()
-        self.scheduler.shutdown_tasks()
-        self.sys.shutdown_tasks()
-        self.spec.shutdown_tasks()
-        self.data.shutdown_tasks()
-
-        loop = asyncio.get_event_loop()
-        loop.create_task(self._wait())
+from .PiccoloSystem import *
