@@ -1,4 +1,8 @@
 2019-12-10 Magnus Hagdorn
+ * piccolo3/client/__init__.py: move PiccoloSystem class to separate module
+ * piccolo3/client/PiccoloSystem.py: moved from class from __init__.py
+
+2019-12-10 Magnus Hagdorn
  * setup.py: install new program
  * piccolo3/ptimes.py: add program to list/modify integration times
 
